--- a/index.html
+++ b/index.html
@@ -10,3 +10,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.50.0/swagger-ui-standalone-preset.js"></script>
 </head>
 <body>
+<div id="swagger-ui"></div>
+<script>
+const ui = SwaggerUIBundle({
+url: "docs.json", // Your documentation file name
+dom_id: '#swagger-ui',deepLinking: true, presets: [SwaggerUIBundle.presets.apis, SwaggerUIBundle.plugins.DownloadUrl]
+});
+</script>
+</body>
+</html>
